--- a/app/templates/Reset_password.html
+++ b/app/templates/Reset_password.html
@@ -26,7 +26,7 @@
   .abc{
   color:#4B0082;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 70px;
+  font-size: 35px;
   font-weight: 900;
   }
 </style>
@@ -38,20 +38,17 @@
           <div class="col-lg-4 mx-auto">
             <div class="auth-form-light text-left py-5 px-4 px-sm-5">
               <div class="">
-           <center><h2 class="abc">Login</h2></center> 
+           <center><h2 class="abc mb-5">Reset Password</h2></center> 
               </div>
-              <center> <h4 class="mt-5">Hello! let's get started</h4>
-              <h6 class="font-weight-light mt-3">Sign in to continue.</h6></center> 
+            
               <form  method="post"   autocomplete="off">
                 {% csrf_token %}
                 <div class="form-group">
-                  <input type="text" name="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Username" required>
+                  <input type="email" name="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email" required>
                 </div>
-                <div class="form-group">
-                  <input type="password" name="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password" required>
-                </div>
+               
                 <div class="mt-3">
-                  <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="{% url 'login' %}">SIGN IN</button>
+                  <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Reset</button>
                 </div>
                 <div class="my-2 d-flex justify-content-between align-items-center">
                   <div class="form-check">
@@ -59,9 +56,7 @@
                       <input type="checkbox" class="form-check-input">
                      
                     </label>
-                  </div>
-                  <a href="{% url 'reset_password' %}" class="auth-link text-black">Forgot password?</a>
-                </div>
+                  
                
                 <div class="text-center mt-4 font-weight-light">
                   Don't have an account? <a href="{% url 'Registration' %}" class="text-primary">Create</a>
