--- a/app/templates/Trainee_index.html
+++ b/app/templates/Trainee_index.html
@@ -85,6 +85,12 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'Trainee_Booking' %}">
+              <i class="icon-grid-2 menu-icon"></i>
+              <span class="menu-title">Booking</span>
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'Trainee_workout_images' %}">
               <i class="icon-grid-2 menu-icon"></i>
               <span class="menu-title">Workout</span>
