view bookings in admin module

--- a/app/templates/SuperAdmin_active_trainers.html
+++ b/app/templates/SuperAdmin_active_trainers.html
@@ -17,6 +17,7 @@
                     <th>Contact.No</th>
                     <th>Rate</th>
                     <th>Status</th>
+                    <th>Work Shift</th>
                     <th>Action</th>
                     <th>Update</th>
                   </tr>
@@ -41,6 +42,12 @@
                         <select class="btn btn-primary btn-sm" name="tstatus">
                           <option>active</option>
                           <option>resign</option>
+                        </select>
+                      </td>
+                      <td>
+                        <select class="btn btn-primary btn-sm" name="work_shift">
+                          <option>Morning</option>
+                          <option>Evening</option>
                         </select>
                       </td>
                       <td>
