--- a/app/templates/SuperAdmin_index.html
+++ b/app/templates/SuperAdmin_index.html
@@ -89,6 +89,12 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href='{% url "SuperAdmin_Bookings" %}'>
+                  <i class="icon-open menu-icon"></i>
+                  <span class="menu-title">Booking</span>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href='{% url "SuperAdmin_pay_det" %}'>
                   <i class="icon-open menu-icon"></i>
                   <span class="menu-title">Payment</span>
