completed booking section  in admin module and trainee module

--- a/app/templates/SuperAdmin_index.html
+++ b/app/templates/SuperAdmin_index.html
@@ -21,6 +21,9 @@
   <link rel="stylesheet" href="{% static 'css/vertical-layout-light/style.css' %}">
   <!-- endinject -->
   <link rel="shortcut icon" href="{% static 'logo3.jpg' %}" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
   <div class="container-scroller">
@@ -89,7 +92,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href='{% url "SuperAdmin_Bookings" %}'>
+                <a class="nav-link" href='{% url "SuperAdmin_BookingSelection" %}'>
                   <i class="icon-open menu-icon"></i>
                   <span class="menu-title">Booking</span>
                 </a>
