--- a/app/templates/SuperAdmin_PassiveBookings.html
+++ b/app/templates/SuperAdmin_PassiveBookings.html
@@ -3,7 +3,6 @@
 {% load static %}
 
 
-
 <div class="row">
     <div class="col-lg-12 grid-margin stretch-card">
       <div class="card">
@@ -42,15 +41,12 @@
                   <td>
                     {% for j in trainer %}
                     {% if i.trainer_id == j.id %}
-                    {{j.fullname}}
+                    {{j.fullname}}</td>
                     {% endif %}
                     {% endfor %}
-                  </td>
                   <td>
                     {% if i.status == "request" %}
-        <a href="{% url 'SuperAdmin_AcceptRequest' i.id %}">  <button type="button" class="btn btn-success">Accept</button></a>
-                 
-       <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-one{{i.id}}">Reject</button>
+         <button type="button" class="btn btn-warning">Pending</button></a>
 
                   {% elif i.status == "Booked" %}
                   <button type="button" class="btn btn-primary">Booked</button>
@@ -81,53 +77,6 @@
   <!-- main-panel ends -->
 </div>
 
-
-
-<!-- Modal -->
-{% for i in booking %}
-<div class="modal" id="modal-one{{i.id}}" >
-    <div class="modal-dialog">
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12 grid-margin  modal-content" >
-
-            <!-- Modal Header -->
-            <div class="modal-header" >
-                <h4 class="modal-title">Reason</h4>
-                <button type="button " class="close "
-                    data-dismiss="modal">&times;</button>
-            </div>
-
-            <!-- Modal body -->
-            <div class="modal-body" >
-                <form action="{% url 'SuperAdmin_RejectReason' i.id %}" method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <div class="card">
-                        <div class="card-body" >
-                            <div class="row p-3">
-                                <div class="col-12 col-sm-12 col-md-12 col-lg-12 d-flex justify-content-center">
-                                    <textarea class="col-12 col-sm-12 col-md-12 col-lg-12 form-control  text-dark"
-                                        style="height: 100px; background-color:white; " name="reply"
-                                        rows="4"> </textarea>
-                                </div>
-                            </div>
-                            <br>
-                            <div  style="float:right;padding-bottom:20px;">
-                                <button type="submit" 
-                                    class="btn btn-outline-primary btn-icon-text ">
-                                    <i class="text-primary mdi mdi-send btn-icon-prepend"></i>
-                                    Send
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </form>
-
-            </div>
-        </div>
-    </div>
-</div>
-
-{% endfor %}
 
 
 
